Course page is adapted off slider

--- a/_app/course.pug
+++ b/_app/course.pug
@@ -39,5 +39,6 @@ html(lang="ru")
 			include pug/course/6-revs
 		include pug/base/2-footer-course
 		include pug/base/3-scripts
+		<script src="https://shop.iomp.ru/?r=fp/admin/getformscript&id=57&vc=358dfb8ea90b7cfdcbc23cb16d4e1f3e&popup=1&hideButton=1"></script> 
 		include pug/scripts/chat
 		include pug/scripts/body_bottom_scripts
