--- a/_app/pug/course/5-author.pug
+++ b/_app/pug/course/5-author.pug
@@ -2,11 +2,12 @@ section#author
 	.container
 		.row
 			.col-md-6.col-md-push-6
-				h4.author-title.d-none
+				h4.general-title.general-title-author.d-none
 					small Спикер
 					span Жанна Абрамова
 				.author-img
-					+img('','img/images/janna-course.png', 'Жанна Абрамова')
+					+img('mob-none-560','img/images/janna-course.png', 'Жанна Абрамова')
+					+img('d-none-560','img/images/janna-course-mob.png', 'Жанна Абрамова')
 					p.author-img-text SKOLKOVO TECH & INNOVATION Awards 2023 в&nbsp;номинации: «Лучший бизнес расстановщик года».
 			.col-md-6.col-md-pull-6
 				h4.general-title.general-title-author.mob-none
