--- a/_app/pug/course/2-for.pug
+++ b/_app/pug/course/2-for.pug
@@ -1,22 +1,23 @@
 section#for
 	.container
 		+gt('', 'Кому подойдет данная программа?')
-		.col-md-10.col-md-offset-1
-			.for-item
-				.for-item-title
-					+img('for-item-img', 'img/icons/for-1.svg', 'Новичкам')
-					h4 Новичкам
-				ul.general-list.general-list-black
-					li Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.
-					li Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.
-					li Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.
-					li Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.
-			.for-item
-				.for-item-title
-					+img('for-item-img', 'img/icons/for-2.svg', 'Опытным специалистам помогающих профессий')
-					h4 Опытным специалистам помогающих профессий
-				ul.general-list.general-list-black
-					li Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.
-					li Использование метода в&nbsp;групповой терапии, поможет повысить доход.
-					li Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.
-			+b('', href, 'Выбрать тариф')
+		.row
+			.col-md-10.col-md-offset-1
+				.for-item
+					.for-item-title
+						+img('for-item-title-img', 'img/icons/for-1.svg', 'Новичкам')
+						h4 Новичкам
+					ul.general-list.general-list-black
+						li Если вы хотите сменить род деятельности, метафорические карты позволяют совершить мягкий переход в&nbsp;новую профессию, за&nbsp;счет совмещения деятельности.
+						li Отсутствие психологического опыта или образования компенсируется наличием четкой системы работы с&nbsp;метафорическими ассоциативными картами.
+						li Не&nbsp;нужно использовать собственный авторитет в&nbsp;терапии, клиент самостоятельно интерпретирует изображения, тем самым берет часть ответственности за&nbsp;результат на&nbsp;себя.
+						li Быстрый способ выйти на&nbsp;доход, техники работы и практики доступны с&nbsp;самого начала обучающего процесса, не&nbsp;нужно ждать диплом.
+				.for-item
+					.for-item-title
+						+img('for-item-title-img', 'img/icons/for-2.svg', 'Опытным специалистам помогающих профессий')
+						h4 Опытным специалистам помогающих профессий
+					ul.general-list.general-list-black
+						li Дополнительно расширит ваш инструментарий. В&nbsp;большинстве случаев МАК карты самый экологичный вид терапии.
+						li Использование метода в&nbsp;групповой терапии, поможет повысить доход.
+						li Метод максимально вовлекает в&nbsp;процесс самого клиента. Повышается лояльность к&nbsp;психологу, как следствие увеличивается количество запросов на&nbsp;терапию.
+		+b('', href, 'Выбрать тариф')
