--- a/_app/styl/base/2-base-course.styl
+++ b/_app/styl/base/2-base-course.styl
@@ -80,6 +80,9 @@ footer
 	background-image: linear-gradient(22deg, #C6F9DC 0%, #4E97B6 100%)
 	border-radius: 42px
 	line-height: 1
+	@media screen and (max-width 386px)
+		font-size: 18px
+		padding 20px
 	&:focus
 		text-decoration none
 		color #fff
@@ -88,25 +91,42 @@ footer
 		color #fff
 .general-title
 	font-family: S
+	font-weight: bold
 	font-size: 60px
 	margin-bottom: 60px
 	color #000
 	line-height: 1.3
+	@media screen and (max-width 991px)
+		font-size: 50px
+	@media screen and (max-width 560px)
+		font-size: 32px
+		margin-bottom: 40px
+	@media screen and (max-width 386px)
+		font-size: 26px
 	&-white
 		color #fff
 	span
 		color #40BDAE
 .mob-none
 	@media screen and (max-width 991px)
-		display none
+		display none !important
+.mob-none-560
+	@media screen and (max-width 560px)
+		display none !important
 .d-none
 	display none
 	@media screen and (max-width 991px)
 		display block
+.d-none-560
+	display none !important
+	@media screen and (max-width 560px)
+		display block !important
 .general-list
 	margin-left: 18px
 	li
 		margin-bottom: 20px
+		@media screen and (max-width 386px)
+			margin-bottom: 10px
 		span
 			font-weight: bold
 		&:last-child
