--- a/_app/styl/course/1-main.styl
+++ b/_app/styl/course/1-main.styl
@@ -1,15 +1,28 @@
 #main
 	padding 0 0 260px
-	background: #000 url(../img/backs/main-course.png) no-repeat center
+	background: #000 url(../img/backs/course-main.png) no-repeat center
 	background-size: cover
 	color:  #fff
 	text-align center
 	margin-bottom: -60px
 	position relative
 	z-index 40
+	@media screen and (max-width 1199px)
+		padding  0 0 160px
+	@media screen and (max-width 560px)
+		padding 0 0 140px
+		margin-bottom: -40px
+	@media screen and (max-width 386px)
+		padding 0 0 100px
+		margin-bottom: -25px
+		background-image: url(../img/backs/course-main-mob.png)
 .main
 	&-pre
 		font-size: 28px
+		@media screen and (max-width 991px)
+			font-size: 24px
+		@media screen and (max-width 386px)
+			font-size: 18px
 	&-title
 		font-family: S
 		font-size: 80px
@@ -19,19 +32,15 @@
 		margin 30px 0 35px
 		line-height: 1.1
 		@media screen and (max-width 1199px)
-			font-size: 22px
+			font-size: 70px
 		@media screen and (max-width 991px)
-			width 45%
-		@media screen and (max-width 650px)
-			font-size: 20px
-		@media screen and (max-width 550px)
-			width 100%
-			padding-top: 10px
-		@media screen and (max-width 500px)
-			width 90%
-		@media screen and (max-width 425px)
-			color #000
-			font-size: 14px
+			font-size: 60px
+		@media screen and (max-width 767px)
+			font-size: 50px
+		@media screen and (max-width 560px)
+			font-size: 40px
+		@media screen and (max-width 386px)
+			font-size: 30px
 	&-subtitle
 		font-size: 28px
 		margin: 0 auto 40px
@@ -39,102 +48,7 @@
 		max-width 750px
 		span
 			font-weight: bold
-	// &-date
-	// 	font-size: 24px
-	// 	font-weight: 900
-	// 	color #55B196
-	// 	line-height: 52px
-	// 	@media screen and (max-width 650px)
-	// 		font-size: 22px
-	// 	@media screen and (max-width 550px)
-	// 		width 270px
-	// 		margin: 45px 0 110px
-	// 		color #3F8771
-	// 	@media screen and (max-width 500px)
-	// 		margin-bottom: 55px
-	// 	@media screen and (max-width 425px)
-	// 		margin 30px 0
-	// 		font-size: 18px
-	// 		line-height: 1.1
-	// 	@media screen and (max-width 360px)
-	// 		font-size: 16px
-	// 	span
-	// 		display inline-block
-	// 		&:last-of-type
-	// 			// border-left: 2px solid #55B196
-	// 			margin-left: 20px
-	// 			padding-left: 20px
-	// 			position relative
-	// 			@media screen and (max-width 550px)
-	// 				display block
-	// 				padding: 10px 0 0
-	// 				margin 10px 0 0
-	// 			&:before
-	// 				content: ''
-	// 				display block
-	// 				position absolute
-	// 				top 0
-	// 				left 0
-	// 				height: 100%
-	// 				width 2px
-	// 				background-color #55B196
-	// 				@media screen and (max-width 550px)
-	// 					top 0
-	// 					left 0
-	// 					width 52px
-	// 					height: 2px
-	// 					background-color: #3F8771
-	// 				@media screen and (max-width 425px)
-	// 					width 30px
-	// &-text
-	// 	display flex
-	// 	flex-direction: row
-	// 	align-items: center
-	// 	width 100%
-	// 	max-width 460px
-	// 	margin 20px 0 0
-	// 	// @media screen and (max-width 650px)
-	// 	// 	max-width none
-	// 	@media screen and (max-width 550px)
-	// 		margin-top: 40px
-	// 		width 370px
-	// 		max-width none
-	// 		border-top-right-radius: 15px
-	// 		border-bottom-right-radius: 15px
-	// 		background-color rgba(#fff, .8)
-	// 		padding: 25px
-	// 		margin-bottom: 45px
-	// 		left -15px
-	// 	@media screen and (max-width 425px)
-	// 		// margin: 20px 0 15px
-	// 		align-items: flex-start
-	// 		width 285px
-	// 		position relative
-	// 		left -15px
-	// 		margin-bottom: 0
-	// 	@media screen and (max-width 385px)
-	// 		margin-top: 25px
-	// 	@media screen and (max-width 360px)
-	// 		margin-bottom: 40px
-	// 	img
-	// 		margin-right: 20px
-	// 		@media screen and (max-width 991px)
-	// 			width 60px
-	// 			margin-right: 10px
-	// 		@media screen and (max-width 425px)
-	// 			width 30px
-	// 			margin-right: 10px
-	// 	p
-	// 		font-size: 18px
-	// 		margin-top: -22px
-	// 		@media screen and (max-width 991px)
-	// 			margin-top: -12px
-	// 		@media screen and (max-width 650px)
-	// 			font-size: 22px
-	// 			font-size: 16px
-	// 			margin-top: -7px
-	// 			line-height: 1.2
-	// 		@media screen and (max-width 425px)
-	// 			font-size: 16px
-	// 		span
-	// 			font-weight: bold
+		@media screen and (max-width 991px)
+			font-size: 24px
+		@media screen and (max-width 386px)
+			font-size: 18px
