--- a/_app/styl/course/2-for.styl
+++ b/_app/styl/course/2-for.styl
@@ -5,8 +5,22 @@
 	border-radius: 58px 58px 0 0
 	position relative
 	z-index 41
+	@media screen and (max-width 1199px)
+		padding 100px 0 160px
+	@media screen and (max-width 560px)
+		padding 60px 0 100px
+		margin-bottom: -40px
+		border-radius: 40px 40px 0 0
+	@media screen and (max-width 386px)
+		border-radius: 25px 25px 0 0
+		padding 60px 0 75px
+		margin-bottom: -25px
 .for-item
 	margin-bottom: 100px
+	@media screen and (max-width 991px)
+		margin-bottom: 60px
+	@media screen and (max-width 560px)
+		margin-bottom: 40px
 	&-title
 		display flex
 		flex-direction: row
@@ -18,7 +32,23 @@
 		padding 16px 40px
 		border-radius: 92px
 		margin-bottom: 30px
+		@media screen and (max-width 560px)
+			max-width 100%
+			padding 16px 25px
+		@media screen and (max-width 386px)
+			padding 16px 20px
+			margin-bottom: 20px
 		h4
 			font-size: 28px
 			color #40BDAE
 			margin-left: 40px
+			@media screen and (max-width 560px)
+				font-size: 24px
+				margin-left: 20px
+			@media screen and (max-width 386px)
+				font-size: 18px
+				margin-left: 10px
+		@media screen and (max-width 560px)
+			&-img
+				width 50px
+				height: 50px
