--- a/_app/styl/course/3-plan.styl
+++ b/_app/styl/course/3-plan.styl
@@ -5,8 +5,20 @@
 	border-radius: 58px 58px 0 0
 	background-color #000
 	// padding 200px 0
+	@media screen and (max-width 560px)
+		margin-bottom: -40px
+		border-radius: 40px 40px 0 0
+	@media screen and (max-width 386px)
+		margin-bottom: -25px
+		border-radius: 25px 25px 0 0
 #why
 	padding 260px 0 200px
+	@media screen and (max-width 1199px)
+		padding 100px 0 100px
+	@media screen and (max-width 560px)
+		padding 60px 0 100px
+	@media screen and (max-width 386px)
+		padding 60px 0 75px
 .why-item
 	&s
 		display flex
@@ -14,6 +26,8 @@
 		flex-wrap: wrap
 		align-items: flex-start
 		justify-content: space-between
+		@media screen and (max-width 991px)
+			justify-content: space-around
 	border-radius: 30px
 	background-color: #DFF4FD
 	text-align center
@@ -42,6 +56,12 @@
 	top 0
 	left  0
 	padding 40px 80px
+	@media screen and (max-width 991px)
+		padding 40px
+	@media screen and (max-width 560px)
+		padding 30px
+	@media screen and (max-width 386px)
+		padding: 20px
 .general-title-plan
 	margin-bottom: 20px
 .plan-button
@@ -52,6 +72,16 @@
 	text-align left
 	color #000
 	font-weight: normal
+	@media screen and (max-width 991px)
+		left 40px
+	@media screen and (max-width 560px)
+		left 30px
+		bottom: 30px
+		max-width calc(100% - 60px)
+	@media screen and (max-width 386px)
+		width 100%
+		left:  20px
+		max-width calc(100% - 40px)
 	&:focus
 	&:hover
 		color #000
@@ -65,21 +95,50 @@
 		position absolute
 		top calc(50% - 1px)
 		right 40px
+		transition: all .3s ease
+		@media screen and (max-width 386px)
+			width 23px
+			height: 2px
 	&:after
 		transform: rotate(90deg)
+	&.active
+		&:before
+			transform: rotate(45deg)
+		&:after
+			transform: rotate(135deg)
 .general-list-plan
+	display none
 	padding-top: 80px
-
+	@media screen and (max-width 991px)
+		padding-top: 40px
+	@media screen and (max-width 386px)
+		padding-top: 20px
 #plan-filling
 	padding 200px 0 260px
+	@media screen and (max-width 1199px)
+		padding 100px 0 160px
+	@media screen and (max-width 386px)
+		padding 60px 0 100px
 .general-title-plan-filling
 	margin-top: 70px
+	@media screen and (max-width 991px)
+		margin-top: 0
 .plan-filling-info
 	background-color #fff
 	border-radius: 69px
 	padding 90px
+	@media screen and (max-width 991px)
+		padding: 50px 60px
+	@media screen and (max-width 560px)
+		padding 40px
+		border-radius: 40px
+	@media screen and (max-width 386px)
+		border-radius: 25px
+		padding 30px 25px
 	&-list
 		margin-bottom: 100px
+		@media screen and (max-width 991px)
+			margin-bottom: 50px
 		li
 			margin-bottom: 50px
 			list-style: none
@@ -98,5 +157,20 @@
 				height: 10px
 				border-radius: 50%
 				background-color: #4E97B6
-				top 7px
+				top 16px
 				left 0
+				@media screen and (max-width 560px)
+					top 12px
+				@media screen and (max-width 386px)
+					width 6px
+					height: 6px
+					top 10px
+			@media screen and (max-width 991px)
+				margin-bottom: 35px
+			@media screen and (max-width 560px)
+				font-size: 24px
+				margin-bottom: 20px
+				padding-left: 30px
+			@media screen and (max-width 386px)
+				padding-left: 21px
+				font-size: 18px
