--- a/_app/styl/course/5-author.styl
+++ b/_app/styl/course/5-author.styl
@@ -5,8 +5,24 @@
 	position relative
 	z-index 44
 	color: #000
+	@media screen and (max-width 1199px)
+		padding 0 0 160px
+	@media screen and (max-width 560px)
+		padding 0 0 100px
+		margin-bottom: -40px
+	@media screen and (max-width 386px)
+		padding 0 0 60px
+		margin-bottom: 25px
 .author-img
 	position relative
+	img
+		display block
+		width 100%
+		max-width 525px
+		@media screen and (max-width 991px)
+			margin-bottom: 35px
+		@media screen and (max-width 560px)
+			margin-bottom: 25px
 	&-text
 		color #fff
 		font-size: 28px
@@ -17,6 +33,13 @@
 		padding 0 45px 45px
 		width 100%
 		max-width 470px
+		@media screen and (max-width 991px)
+			padding 0 35px 35px
+		@media screen and (max-width 560px)
+			font-size: 24px
+		@media screen and (max-width 386px)
+			font-size: 18px
+			padding 0 25px 25px
 .general-title-author
 	small
 		display block
@@ -24,3 +47,5 @@
 		font-family: I
 		font-weight: normal
 		font-size: 28px
+		@media screen and (max-width 991px)
+			margin 0 0 10px
