--- a/_app/styl/course/6-revs.styl
+++ b/_app/styl/course/6-revs.styl
@@ -4,17 +4,30 @@
 	position relative
 	z-index 45
 	background-color: #000
-	@media screen and (max-width 650px)
-		padding 60px 0
+	@media screen and (max-width 1199px)
+		padding 100px 0
+	@media screen and (max-width 560px)
+		padding 60px 0 100px
+		border-radius: 40px 40px 0 0
+	@media screen and (max-width 386px)
+		padding 60px 0 75px
+		border-radius: 25px 25px 0 0
 .revs-slider-text
-	// width 88%
-	margin 0 auto
+	width 100%
+	// margin 0 auto
+	height: 100%
+	position: relative
+	top 0
+	left 0
+	// @media screen and (max-width 386px)
+	@media screen and (max-width 386px)
+		width 120%
+		margin 0 -30px 0 -15px
+.text-rev-link
 	@media screen and (max-width 767px)
-		width 100%
-// .slick-list
-// 	border-radius: 15px
+		margin-right: 20px
 .text-rev-img
-	height: 400px
+	height: 250px
 	object-fit: contain
 	object-position: center
 	width 320px
@@ -23,36 +36,41 @@
 	display block
 	margin: 0 auto
 	// padding 0 10px
-	@media screen and (max-width 626px)
-		width 400px
-	@media screen and (max-width 535px)
-		width 300px
-	@media screen and (max-width 438px)
-		height: 120px
-		width 200px
-	@media screen and (max-width 338px)
-		width 150px
-.slick-next, .slick-prev
-	&:before
-		content: none
-	width 52px
-	height: 52px
-	background-repeat: no-repeat
-	background-position: center
-	background-size: cover
-.slick-next
-	background-image: url(../img/icons/next.svg)
-	right: -65px
+	cursor e-resize
 	@media screen and (max-width 767px)
-		right 0
-	&:focus
-	&:hover
-		background-image: url(../img/icons/next.svg)
-.slick-prev
-	background-image: url(../img/icons/prev.svg)
-	left -65px
-	@media screen and (max-width 767px)
-		left 0
-	&:focus
-	&:hover
-		background-image: url(../img/icons/prev.svg)
+		width 100%
+		height: auto
+		max-width: auto
+		// margin-right: 20px
+	// 	width 340px
+	// @media screen and (max-width 535px)
+	// 	width 200px
+	// @media screen and (max-width 438px)
+	// 	height: 120px
+	// 	width 200px
+	// @media screen and (max-width 338px)
+	// 	width 150px
+// .slick-next, .slick-prev
+// 	&:before
+// 		content: none
+// 	width 52px
+// 	height: 52px
+// 	background-repeat: no-repeat
+// 	background-position: center
+// 	background-size: cover
+// .slick-next
+// 	background-image: url(../img/icons/next.svg)
+// 	right: -65px
+// 	@media screen and (max-width 767px)
+// 		right 0
+// 	&:focus
+// 	&:hover
+// 		background-image: url(../img/icons/next.svg)
+// .slick-prev
+// 	background-image: url(../img/icons/prev.svg)
+// 	left -65px
+// 	@media screen and (max-width 767px)
+// 		left 0
+// 	&:focus
+// 	&:hover
+// 		background-image: url(../img/icons/prev.svg)
