--- a/_app/pug/course/3-plan.pug
+++ b/_app/pug/course/3-plan.pug
@@ -5,7 +5,7 @@
 				span именно наш институт
 				br.mob-none
 				|  нужно выбрать для обучения
-			.why-items
+			.why-items.mob-none
 				p.why-item Опыт создания обучающих систем, проверенный временем
 				p.why-item Звездный преподавательский состав
 				p.why-item Не&nbsp;просто теория, а&nbsp;практика в&nbsp;процессе обучения
@@ -14,6 +14,15 @@
 				p.why-item Тьютор на&nbsp;весь процесс обучения
 				p.why-item Инновационные методы тестирования знаний без&nbsp;зазубривания материала
 				p.why-item Неограниченный доступ к&nbsp;материалам программы
+		.owl-carousel.why-items.why-items-owl.d-none
+			p.why-item Опыт создания обучающих систем, проверенный временем
+			p.why-item Звездный преподавательский состав
+			p.why-item Не&nbsp;просто теория, а&nbsp;практика в&nbsp;процессе обучения
+			p.why-item Супервизии в&nbsp;группе с&nbsp;практикующими специалистами
+			p.why-item Помощь в&nbsp;разборе вашей практики
+			p.why-item Тьютор на&nbsp;весь процесс обучения
+			p.why-item Инновационные методы тестирования знаний без&nbsp;зазубривания материала
+			p.why-item Неограниченный доступ к&nbsp;материалам программы
 	section#plan
 		.container
 			.plan-wrapper
