--- a/_app/styl/base/2-base-course.styl
+++ b/_app/styl/base/2-base-course.styl
@@ -108,15 +108,15 @@ footer
 	span
 		color #40BDAE
 .mob-none
-	@media screen and (max-width 991px)
+	@media screen and (max-width 767px)
 		display none !important
 .mob-none-560
 	@media screen and (max-width 560px)
 		display none !important
 .d-none
-	display none
-	@media screen and (max-width 991px)
-		display block
+	display none !important
+	@media screen and (max-width 767px)
+		display block !important
 .d-none-560
 	display none !important
 	@media screen and (max-width 560px)
