--- a/_app/styl/course.min.styl
+++ b/_app/styl/course.min.styl
@@ -1,8 +1,10 @@
 @import 'base/1-fonts-course'
 
 @import '../_css/bootstrap.min.css'
-@import '../_css/slick.css'
-@import '../_css/slick-theme.css'
+// @import '../_css/slick.css'
+// @import '../_css/slick-theme.css'
+@import '../_css/owl.carousel.css'
+@import '../_css/owl.theme.default.min.css'
 @import '../_css/jquery.fancybox.min.css'
 
 @import 'base/2-base-course'
