--- a/_app/pug/course/6-revs.pug
+++ b/_app/pug/course/6-revs.pug
@@ -2,6 +2,6 @@ section#revs
 	.container
 		+gt('general-title-white', 'Отзывы')
 		.content
-			.revs-slider-text
-				each n in [1,2,3,4,5,6,7,8,9,10]
-					a.text-rev-link(href=path+"img/revs/text-"+n+".png" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".png", alt="Отзыв "+n).text-rev-img
+	.revs-slider-text.owl-carousel
+		each n in [1,2,3,4,5,6,7,8,9,10]
+			a.text-rev-link(href=path+"img/revs/text-"+n+".png" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".png", alt="Отзыв "+n).text-rev-img
