--- a/_app/styl/course/3-plan.styl
+++ b/_app/styl/course/3-plan.styl
@@ -28,6 +28,9 @@
 		justify-content: space-between
 		@media screen and (max-width 991px)
 			justify-content: space-around
+		// @media screen and (max-width 767px)
+		// 	position relative
+		// 	left 15px
 	border-radius: 30px
 	background-color: #DFF4FD
 	text-align center
@@ -40,7 +43,13 @@
 	display flex
 	align-items: center
 	justify-content: center
-
+	@media screen and (max-width 767px)
+		// max-width none
+		// width auto
+		margin-left: 15px
+	@media screen and (max-width 560px)
+		padding 10px 45px
+		max-width 230px
 // #plan
 // 	padding 200px 0
 .plan
