--- a/_app/styl/course/4-prices.styl
+++ b/_app/styl/course/4-prices.styl
@@ -7,6 +7,11 @@
 	background-color #fff
 	@media screen and (max-width 1199px)
 		padding 100px 0 160px
+	@media screen and (max-width 767px)
+		.container-wrap
+			position relative
+			width 100%
+			padding 0
 	@media screen and (max-width 560px)
 		padding 60px 0 160px
 		margin-bottom: -40px
@@ -22,40 +27,79 @@
 		flex-direction: row
 		align-items: flex-start
 		justify-content: space-between
+		width 100%
+		max-width 1170px
+		margin 0 auto
+		@media screen and (max-width 1199px)
+			max-width 970px
+		@media screen and (max-width 992px)
+			max-width 950px
+		@media screen and (max-width 767px)
+			// left: 15px
+			width 100%
+			max-width none
+			// margin 0
+		// @media screen and (max-width 767px)
+		// 	width 130% !important
+		// 	margin: 0 0 0 -15px
 	width 100%
-	max-width 540px
+	max-width 560px
 	text-align center
+	position relative
 	@media screen and (max-width 1199px)
-		max-width: 440px
+		max-width 460px
+	@media screen and (max-width 991px)
+		width 100%
+		max-width 350px
+	@media screen and (max-width 767px)
+		margin-left: 15px
+		// width calc(100% - 60px)
+		// width 100%
+	@media screen and (max-width 560px)
+		max-width 230px
 	&-head
 		background-color: #000
 		border-radius: 69px 69px 0 0
 		padding 30px 30px 73px
 		margin-bottom: -42px
+		@media screen and (max-width 560px)
+			padding 10px 20px 60px
 		&-title
 			font-family: S
 			font-size: 60px
 			font-weight: normal
+			@media screen and (max-width 991px)
+				font-size: 50px
+			@media screen and (max-width 560px)
+				font-size: 26px
 			small
 				display block
 				font-family: I
 				font-size: 28px
+				@media screen and (max-width 991px)
+					font-size: 24px
+				@media screen and (max-width 560px)
+					font-size: 16px
 	&-body
 		border-radius: 42px
 		background-color: #DFF4FD
 		color #000
 		padding: 95px 45px 45px
+		@media screen and (max-width 991px)
+			padding 45px 30px
+		@media screen and (max-width 560px)
+			padding 40px 20px 30px
 	&-or
 		display flex
 		align-items: center
 		justify-content: center
-		width 140px
+		width 120px
 		text-align center
 		position absolute
 		top 280px
-		left 0
+		left -70px
 		right 0
-		margin 0 auto
+		// margin 0 auto
 		font-family: S
 		font-size: 40px
 		font-weight: 900
@@ -64,6 +108,32 @@
 		padding 0 22px 12px
 		line-height: 1
 		height: 87px
+		@media screen and (max-width 1199px)
+			width 100px
+			font-size: 32px
+			left -60px
+			height: 70px
+			top 290px
+		@media screen and (max-width 991px)
+			top auto
+			bottom: 130px
+			font-size: 28px
+			border-radius: 25px
+			height: 60px
+			top auto
+			bottom: 150px
+			left -80px
+			width 140px
+		// @media screen and (max-width 767px)
+		// 	left -80px
+		@media screen and (max-width 560px)
+			width 78px
+			height: 43px
+			font-size: 20px
+			padding 2px 15px 8px
+			line-height: 43px
+			bottom: 98px
+			left: -50px
 .cost
 	font-family: S
 	font-weight: 900
@@ -71,19 +141,39 @@
 		font-size: 90px
 		@media screen and (max-width 1199px)
 			font-size: 75px
+		@media screen and (max-width 991px)
+			font-size: 60px
+		@media screen and (max-width 767px)
+			font-size: 45px
+		@media screen and (max-width 560px)
+			font-size: 38px
 	&-full
 		color #4E97B6
 		font-size: 40px
 		margin-bottom: 90px
+		@media screen and (max-width 991px)
+			font-size: 32px
+			margin-bottom: 60px
+		@media screen and (max-width 560px)
+			font-size: 20px
+			margin-bottom: 45px
 		span
 			text-decoration line-through
 	&-text
 		font-size: 28px
 		text-transform uppercase
 		margin 35px 0 45px
+		@media screen and (max-width 991px)
+			font-size: 24px
+		@media screen and (max-width 560px)
+			font-size: 16px
+			margin 10px 0
 .button-cost
 	background-image: none
 	background-color: #40BDAE
+	@media screen and (max-width 560px)
+		font-size: 16px
+		padding: 17px 35px
 .prices-text
 	text-align center
 	font-size: 28px
@@ -91,9 +181,9 @@
 	color #000
 	@media screen and (max-width 1199px)
 		margin 100px 0
-	@media screen and (max-width 560px)
+	@media screen and (max-width 991px)
 		font-size: 24px
-		margin 90px 0
+		margin 70px 0
 	@media screen and (max-width 386px)
 		font-size: 18px
 		margin 40px 0
