--- a/_app/styl/course/6-revs.styl
+++ b/_app/styl/course/6-revs.styl
@@ -14,15 +14,18 @@
 		border-radius: 25px 25px 0 0
 .revs-slider-text
 	width 100%
-	// margin 0 auto
-	height: 100%
-	position: relative
-	top 0
-	left 0
-	// @media screen and (max-width 386px)
-	@media screen and (max-width 386px)
-		width 120%
-		margin 0 -30px 0 -15px
+	max-width 1170px
+	margin 0 auto
+	@media screen and (max-width 1199px)
+		max-width 950px
+	@media screen and (max-width 991px)
+		max-width 750px
+	@media screen and (max-width 767px)
+		max-width none
+		// left 15px
+// 	@media screen and (max-width 386px)
+// 		width 120%
+// 		margin 0 -30px 0 -15px
 .text-rev-link
 	@media screen and (max-width 767px)
 		margin-right: 20px
@@ -37,10 +40,14 @@
 	margin: 0 auto
 	// padding 0 10px
 	cursor e-resize
-	@media screen and (max-width 767px)
-		width 100%
-		height: auto
-		max-width: auto
+	@media screen and (max-width 991px)
+		margin-left: 15px
+	@media screen and (max-width 560px)
+		height: 200px
+		width 230px !important
+	// @media screen and (max-width 386px)
+		// height: auto
+		// max-width: auto
 		// margin-right: 20px
 	// 	width 340px
 	// @media screen and (max-width 535px)
